Mon May  8 19:01:55 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

- cpsups.c: redo of fix of uninitialized variable (Novell bug #159479)
  because of portability concerns of previous patch

Sat Apr 08 21:28:44 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - powermust.c: increased the interval between sending chars.
 - driver.list: added a couple of models supported by powermust.

Wed Apr 05 13:23:42 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

- cpsups.c: fix uninitialized variable (Novell bug #159479)

Wed Apr 05 07:58:47 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - newhidups:
   * fix the "double free or corruption" crash upon device
     reconnexion (Debian bug #354305)
   * mge-hid: add new models: Evolution, Pulsar, Pulsar M and Pulsar MX

 - mge-shut:
   * harness the LB flag with ShutdownImminent
   * fix some wrong data format, and remove the zero prefix
   * add Comet EX RT 3:1 (without 3 phase data for the moment)
   * add new models: Evolution, Pulsar, Pulsar M and Pulsar MX
   * bump version to 0.66

 - driver.list: completed with the new above compatibilities

Thu Mar 30 1:02:37 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - man/powermust.8: added battery test command to the man page.

Wed Mar 29 3:11:15 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - powermust.c: changed "output.frequency" to "input.frequency"

Wed Mar 22 20:58:22 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: remove the wrong ups.status setting to OB upon
   communication failure.

   [Alioth Bug #303257]

Sat Mar 18 10:40:57 EST 2006/ Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: fixed float/double mismatch in battery voltage
   (backported from trunk)

Fri Mar 10 14:10:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - docs/FAQ: removed entry that is no longer applicable, since
   starting from version 1.4.0, upsd will no longer be able to
   startup in this particular case (it changes UID before reading the