@@ -1,3 +1,8 @@
+Wed May 17 08:46:55 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
+
+ - sstate.c: fix bug with upsd declaring driver stale when the system
+   resumes after suspend-to-disk
+
 Mon May  8 19:01:55 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
 
 - cpsups.c: redo of fix of uninitialized variable (Novell bug #159479)
